{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 9,
  "lineage": "e5566b78-c2d1-3fb3-1461-ed45a5019543",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/networkInterfaces/practice7",
            "internal_domain_name_suffix": "zhx4euoxmbwunhjcicxpdxk3md.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/virtualNetworks/practice3vnet/subnets/practice4subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D5-CC-F2",
            "name": "practice7",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "practice2",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Compute/virtualMachines/practice8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/networkSecurityGroups/practice5nsg",
            "location": "eastus",
            "name": "practice5nsg",
            "resource_group_name": "practice2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "practice6",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/networkSecurityGroups/practice5nsg/securityRules/practice6",
            "name": "practice6",
            "network_security_group_name": "practice5nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "practice2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/virtualNetworks/practice3vnet/subnets/practice4subnet",
            "name": "practice4subnet",
            "resource_group_name": "practice2",
            "timeouts": {
            },
            "virtual_network_name": "practice3vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/virtualNetworks/practice3vnet/subnets/practice4subnet",
            "network_security_group_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/networkSecurityGroups/practice5nsg",
            "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/virtualNetworks/practice3vnet/subnets/practice4subnet",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "51e2efc9-60d7-466d-9d22-40aef1dd5d63",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/virtualNetworks/practice3vnet",
            "location": "eastus",
            "name": "practice3vnet",
            "resource_group_name": "practice2",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/virtualNetworks/practice3vnet/subnets/practice4subnet",
                "name": "practice4subnet",
                "security_group": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/practice2/providers/Microsoft.Network/networkSecurityGroups/practice5nsg"
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    }
  ]
}